fix: change info about education

--- a/index.html
+++ b/index.html
@@ -158,13 +158,15 @@
                   Courses:
                   <ul class="education-list">
                     <li>
-                      <a href="https://teachmeskills.by/" target="_blank"
-                        >- TeachMeSkills ("Front-end development”)</a
+                      <a
+                        href="https://app.rs.school/certificate/r28ci3wj"
+                        target="_blank"
+                        >- RS SCHOOL (course "JavaScript/Front-end. Stage 0")</a
                       >
                     </li>
                     <li>
-                      <a href="https://htmlacademy.ru/" target="_blank"
-                        >- HTML Academy ("Front-end development”)</a
+                      <a href="https://teachmeskills.by/" target="_blank"
+                        >- TeachMeSkills (course "Front-end development”)</a
                       >
                     </li>
                   </ul>
