fix: delete trailing whitespace

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>cv</title>
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="assets/img/favicon.ico" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/img/favicon.ico">
   </head>
   <body>
     <div class="wrapper">
@@ -41,7 +41,7 @@
         <div class="main-top top">
           <div class="top-row">
             <div class="top-image">
-              <img src="assets/img/photo.jpg" alt="photo" />
+              <img src="assets/img/photo.jpg" alt="photo">
             </div>
             <div class="top-info">
               <h1 class="top-name">Natalia Zelenevskaya</h1>
@@ -189,8 +189,7 @@
                 <img
                   class="project-image"
                   src="./assets/img/project.png"
-                  alt="project photo"
-                />
+                  alt="project photo">
               </div>
             </section>
             <section class="code section" id="code">
@@ -218,7 +217,7 @@ newStart: for (let i = 2; i &lt;= n; i++) {
         <div class="footer-wrapper">
           <div class="footer-logo">
             <a href="https://rs.school/js/" target="_blank">
-              <img src="./assets/img/logo-rsschool.svg" alt="RS School logo" />
+              <img src="./assets/img/logo-rsschool.svg" alt="RS School logo">
             </a>
           </div>
           <div class="footer-year">
@@ -227,7 +226,7 @@ newStart: for (let i = 2; i &lt;= n; i++) {
           </div>
           <div class="footer-git">
             <a href="https://github.com/NatalliaZel" target="_blank">
-              <img src="./assets/img/logo.png" alt="GitHub logo" />
+              <img src="./assets/img/logo.png" alt="GitHub logo">
             </a>
           </div>
         </div>
