fix: delete trailing whitespace

--- a/index.html
+++ b/index.html
@@ -58,14 +58,10 @@
                 <li class="contact-location element">Belarus, Minsk</li>
                 <li class="contact-phone element">+999 99 999 99 99</li>
                 <li class="contact-email element">
-                  <a href="mailto:zelenevskayan2015@gmail.com" target="_blank"
-                    >zelenevskayan2015@gmail.com</a
-                  >
+                  <a href="mailto:zelenevskayan2015@gmail.com" target="_blank">zelenevskayan2015@gmail.com</a>
                 </li>
                 <li class="contact-git element">
-                  <a href="https://github.com/NatalliaZel" target="_blank"
-                    >@NatalliaZel</a
-                  >
+                  <a href="https://github.com/NatalliaZel" target="_blank">@NatalliaZel</a>
                 </li>
                 <li class="contact-discord element">
                   Natalia (@NatalliaZel) #6984
@@ -158,16 +154,10 @@
                   Courses:
                   <ul class="education-list">
                     <li>
-                      <a
-                        href="https://app.rs.school/certificate/r28ci3wj"
-                        target="_blank"
-                        >- RS SCHOOL (course "JavaScript/Front-end. Stage 0")</a
-                      >
+                      <a href="https://app.rs.school/certificate/r28ci3wj" target="_blank">- RS SCHOOL (course "JavaScript/Front-end. Stage 0")</a>
                     </li>
                     <li>
-                      <a href="https://teachmeskills.by/" target="_blank"
-                        >- TeachMeSkills (course "Front-end development”)</a
-                      >
+                      <a href="https://teachmeskills.by/" target="_blank">- TeachMeSkills (course "Front-end development”)</a>
                     </li>
                   </ul>
                 </li>
@@ -179,17 +169,10 @@
                 <p class="project-name">AX<span>IT</span></p>
                 <div class="project-button">
                   <div class="project-button_wrapper">
-                    <a
-                      href="https://natalliazel.github.io/AXIT/"
-                      target="_blank"
-                      >See project</a
-                    >
+                    <a href="https://natalliazel.github.io/AXIT/" target="_blank">See project</a>
                   </div>
                 </div>
-                <img
-                  class="project-image"
-                  src="./assets/img/project.png"
-                  alt="project photo">
+                <img class="project-image" src="./assets/img/project.png" alt="project photo">
               </div>
             </section>
             <section class="code section" id="code">
@@ -206,8 +189,7 @@ newStart: for (let i = 2; i &lt;= n; i++) {
   }
   console.log (i);
 } 
-               </pre
-                >
+               </pre>
               </div>
             </section>
           </div>
