fix: delete trailing whitespace

--- a/index.html
+++ b/index.html
@@ -188,8 +188,7 @@ newStart: for (let i = 2; i &lt;= n; i++) {
     if (i % j == 0) continue newStart;
   }
   console.log (i);
-} 
-               </pre>
+}</pre>
               </div>
             </section>
           </div>
